[project]
name = "web-scraper"
version = "0.1.0"
dependencies = [
    "typer",
    "tqdm",
    "joblib",
    "pandas",
    "requests",
    "tenacity",
    "selenium",
    "beautifulsoup4",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
