[project]
name = "web-scraper"
version = "0.1.0"
dependencies = [
    "typer>=0.19.2",
    "tqdm>=4.67.1",
    "joblib>=1.5.2",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "selenium>=4.35.0",
    "beautifulsoup4>=4.13.5",
]
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
